--- a/index.html
+++ b/index.html
@@ -5,90 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Restoran A Mee</title>
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-<style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #fff0e6, #ffe5cc);
-        color: #333;
-    }
-    header {
-        text-align: center;
-        padding: 2rem;
-        background: #ffdab9;
-    }
-    header h1 {
-        font-size: 4rem;
-        font-family: 'Pacifico', cursive;
-    }
-    header p {
-        font-size: 2rem;
-        color: #aa4a30;
-    }
-    nav {
-        display: flex;
-        justify-content: center;
-        gap: 2rem;
-        background: #f7c6a3;
-        padding: 1rem;
-    }
-    nav a {
-        color: #333;
-        text-decoration: none;
-        font-weight: bold;
-    }
-    .carousel-container {
-        overflow: hidden;
-        position: relative;
-        max-width: 100%;
-        margin: 1rem auto;
-    }
-    .carousel-track {
-        display: flex;
-        transition: transform 0.5s ease;
-    }
-    .carousel-track img {
-        width: 350px;
-        height: 250px;
-        object-fit: cover;
-        margin-right: 10px;
-        border-radius: 10px;
-    }
-    .carousel-buttons {
-        text-align: center;
-        margin-top: 0.5rem;
-    }
-    .menu {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 1rem;
-        padding: 2rem;
-    }
-    .menu-item {
-        background: #fffaf2;
-        padding: 1rem;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        text-align: center;
-    }
-    .menu-item img {
-        width: 100%;
-        border-radius: 10px;
-    }
-    .menu-item h3 {
-        margin: 0.5rem 0 0;
-        font-size: 1.2rem;
-    }
-    .cart, #page2 {
-        padding: 2rem;
-    }
-    footer {
-        text-align: center;
-        padding: 1rem;
-        background: #f7c6a3;
-    }
-</style>
-</head>
+</head><link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/flexslider.css">
+
 <body>
 <audio autoplay loop>
     <source src="https://cdn.pixabay.com/download/audio/2023/03/23/audio_cff0400e6d.mp3?filename=the-kitchen-142291.mp3" type="audio/mpeg">
